# duckdb-obsidian

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  requirements-dev.txt  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: obsidian_body.cpp  obsidian_extension.cpp  obsidian_frontmatter.cpp  obsidian_wikilinks.cpp
src/include/: obsidian_body.hpp  obsidian_extension.hpp  obsidian_frontmatter.hpp  obsidian_wikilinks.hpp
test/sql/: obsidian.test
test/sql/vault/: note_a.md  note_c.md  note_d.md  note_e.md  note_f.md  note_g.md  note_h.md  note_i.md  note_j.md  note_k.md  note_l.md
test/sql/vault/subdir/: note_b.md
